# SalsaSpectrum

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
salsaspectrum/: __init__.py  const_physical.py  spectrum.py  utils.py
tests/: test_workflow_generator.py
tests/salsa_files/: spectrum_80_0_12-34.fits  spectrum_80_0_12-35.fits
